# einstein-arena

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/learned/: dissect-the-incumbent.md
arena/: __init__.py  client.py  pnt_colgen.py  pnt_evolve.py  pnt_lp.py  pnt_seeds.py  pnt_verify.py  pnt_warm.py  verifier.py
docs/: EINSTEIN-ARENA-PLAN.md  PNT-PROGRESS.md  SATURATION-SCAN.md
results/prime-number-theorem/: best.json  ceiling.json  evolve_best.json  multiscale_record.json  probe_multiscale_2000.json  provenance.json  thread_draft.md
scripts/: ceiling_prime_number_theorem.py  evolve_prime_number_theorem.py  fetch_pnt_arena_compare.py  multiscale_record_pnt.py  pnt_colgen_probe.py  pnt_llm_propose.py  saturation_scan.py  solve_erdos_min_overlap.py  solve_min_distance_ratio.py  solve_prime_number_theorem.py  solve_third_autocorrelation.py  submit_pnt_record.py
tests/: test_client_registration.py  test_erdos_min_overlap.py  test_min_distance_ratio.py  test_pnt_colgen.py  test_pnt_evolve.py  test_pnt_lp.py  test_pnt_lp_solver.py  test_pnt_seeds.py  test_pnt_verify.py  test_pnt_warm.py  test_third_autocorrelation.py
verifiers/: README.md
